// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card 1`] = `"<i aria-label=\\"Prompt: Conversation\\" class=\\"conversation icon\\"></i>Prompt: Conversation"`;

exports[`Card 2`] = `"<i aria-label=\\"Prompt: Conversation\\" class=\\"conversation icon\\"></i>Prompt: Conversation"`;

exports[`Snapshot 1 1`] = `
Object {
  "configuration": Object {
    "duration": 0,
    "end": 0,
    "kind": "whole",
    "start": 0,
  },
  "header": "",
  "id": "",
  "prompt": "",
  "recallId": "",
  "required": true,
  "responseId": undefined,
  "timeout": 0,
  "type": "ConversationPrompt",
  "url": "",
}
`;

exports[`Snapshot 2 1`] = `
Object {
  "configuration": Object {
    "duration": 0,
    "end": 0,
    "kind": "whole",
    "start": 0,
  },
  "header": "",
  "id": "",
  "prompt": "",
  "recallId": "",
  "required": true,
  "responseId": undefined,
  "timeout": 0,
  "type": "ConversationPrompt",
  "url": "",
}
`;

exports[`Snapshot 3 1`] = `
Object {
  "configuration": Object {
    "duration": 0,
    "end": 0,
    "kind": "whole",
    "start": 0,
  },
  "header": "",
  "id": "",
  "prompt": "",
  "recallId": "",
  "required": true,
  "responseId": "XYZ",
  "timeout": 0,
  "type": "ConversationPrompt",
  "url": "",
}
`;
